--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -105,11 +105,12 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/booking_button"
             android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:layout_margin="@dimen/vertical_margin"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
             android:text="Далее"
+            android:textSize="20sp"
             android:textAllCaps="false"
 
             android:textColor="@color/white"
@@ -119,8 +120,9 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/booked"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_width="250dp"
+            android:textSize="20sp"
+            android:layout_height="55dp"
             android:layout_margin="@dimen/vertical_margin"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
