--- a/app/src/main/res/drawable/card1_background.xml
+++ b/app/src/main/res/drawable/card1_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/grey"/>
-    <corners android:radius="60dp"/>
+    <solid android:color="@color/blue2"/>
+    <corners android:radius="30dp"/>
 
 
 </shape>
