--- a/app/src/main/res/layout/card_reservation_unit.xml
+++ b/app/src/main/res/layout/card_reservation_unit.xml
@@ -114,6 +114,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:textAllCaps="false"
                 android:text="Отменить бронь"
                 android:textSize="12sp"
                 android:fontFamily="@font/inter_bold"
