--- a/app/src/main/res/layout/fragment_cancelation.xml
+++ b/app/src/main/res/layout/fragment_cancelation.xml
@@ -23,9 +23,8 @@
         android:id="@+id/rent_inits_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/my_rent"
-         />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/my_rent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
