--- a/app/src/main/res/layout/fragment_admin_calendar_1.xml
+++ b/app/src/main/res/layout/fragment_admin_calendar_1.xml
@@ -20,11 +20,11 @@
             android:id="@+id/title_rent_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/vertical_margin"
             android:fontFamily="@font/inter_bold"
             android:text="Бронирование"
             android:textColor="@color/darkblue"
             android:textSize="40sp"
+            android:layout_marginTop="@dimen/vertical_margin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,12 +36,14 @@
             android:background="@drawable/blue_shape"
             android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:theme="@style/CalenderViewCustom"
+            android:layout_marginTop="@dimen/vertical_margin"
             android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_rent_label" />
 
         <TextView
+            android:paddingVertical="@dimen/vertical_margin"
             android:id="@+id/describe_label_1"
             style="@style/DescribeTextView"
             android:layout_width="wrap_content"
@@ -56,11 +58,13 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginVertical="6dp"
             android:background="@drawable/input_edittext_background"
             android:outlineAmbientShadowColor="@color/black"
+
             android:padding="@dimen/base_padding"
+            android:layout_marginTop="@dimen/vertical_margin"
             app:cardBackgroundColor="@color/blue4"
             app:cardCornerRadius="60dp"
             app:layout_constrainedWidth="true"
@@ -81,15 +85,16 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/booked"
-            android:layout_width="250dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="@dimen/vertical_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/base_padding"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
             android:text="Мои Бронирования"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
